tests/loners/loners.exp
Error ----------------------------------------------------------- loners.js:2:11

Cannot get `o.z` because property `z` is missing in object literal.



Found 1 error
